fixed spacing above the date modified that was added from WET changes re: #527

--- a/src/sass/_defaults.scss
+++ b/src/sass/_defaults.scss
@@ -176,13 +176,12 @@ aside {
 .pagedetails {
 	padding-top: 2em;
 	padding-bottom: 2em;
-}
-
-.datemod {
-	padding-top: 7px;
-	padding-bottom: 7px;
-	#wb-date {
-		margin-top: 0;
+	.datemod {
+		padding-top: 7px;
+		padding-bottom: 7px;
+		#wb-dtmd {
+			margin-top: 0;
+		}
 	}
 }
 
